<?xml version="1.0"?>
<package format="2">
  <name>test_camera_info</name>
  <version>0.0.0</version>
  <description>Test camera_info</description>

  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
